--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "buefy": "^0.8.20",
     "core-js": "^3.6.5",
+    "timeline-vuejs": "^1.1.7",
     "vue": "^2.6.11",
     "vue-router": "^3.4.2",
     "vue-slick-carousel": "^1.0.6",
