--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "buefy": "^0.8.20",
     "core-js": "^3.6.5",
+    "firebase": "^7.18.0",
     "timeline-vuejs": "^1.1.7",
     "vue": "^2.6.11",
     "vue-router": "^3.4.2",
