--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "buefy": "^0.8.20",
     "core-js": "^3.6.5",
+    "emailjs-com": "^2.6.3",
     "firebase": "^7.18.0",
     "timeline-vuejs": "^1.1.7",
     "vue": "^2.6.11",
